+ Added translations of active_projects and archived projects
  in organization node. [Dennis]
+ Added dutch and english translation of mra_complete. [Dennis]
* Fixed descriptor of organization.contracts node [Dennis]
* Fixed: projectstatus now also shows phases without a startdate 
  and/or enddate. [Dennis]
* Fixed: fatal error in class.project.inc. [Dennis]


Changes in Achievo 1.3
----------------------
+ Added CSV import possibility to projects and employees.
+ Added ability to set the following password restrictions: minimum length,
  minimum number of uppercase characters, minimum number of lowercase
  charactes, minimum number of uppercase and lowercase characters together,
  number of numbers and the number of special characters. This can be done
  by setting the $config_password_minsize, $config_password_minupperchars,
  $config_password_minlowerchars, $config_password_minalphabeticchars,
  $config_password_minnumbers, $config_password_minspecialchars variables.
  [Guido]
+ Added translations for "alldepartments", "allfunctionlevels",
  "private_appointment", "example" and  "startday". [Guido]
+ Added ability for users to select their own language. [Boy]
+ Added achievo_modern theme. [Norman,Boy]
+ Added the ability to globaly disallow specific pim items to be used.
  [Guido]
+ Added description field to roles. [Guido]
+ Added patch for updating the user language with the default language
  when it's not set. [Sandy]
+ Added patch for updating the user theme with the default theme when
  it's not set or contains a depricated theme. (bug 665) [Sandy]
+ Added contractname to the contracts. This field will be used in
  the project admin instead of the description field. (bug 475) [Sandy]
+ Added duration field for project phase to see how many workdays there
  are in a phase. [Sandy]
+ Added the projectcode to project descriptors. [Guido]
+ Added ability to set a $config_projectnumbermodule to asssign a module