@@ -100,6 +100,11 @@ INPUT.btn_saveandnext
   height: 25px;
 }
 
+.atkboolattribute
+{
+  border:0px ! Important;
+}
+
 INPUT.btn_saveandclose
 {
   font-weight: bold;
