@@ -15,7 +15,8 @@ Changes in achievo_tomorrow
 * Fixed: projectstatus now also shows phases without a startdate 
   and/or enddate. [Dennis]
 * Fixed: fatal error in class.project.inc. [Dennis]
-
+* Fixed: Removed border from atkboolattribute in Internet Explorer. 
+  [Dennis]
 
 Changes in Achievo 1.3
 ----------------------
